// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Technology Details Page render correctly when user is logged in 1`] = `
.c27 {
  display: block;
}

.c26 {
  display: none;
}

.c41 {
  background-color: hsla(0,0%,98%);
  padding: 9rem 5%;
}

.c29 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c42 {
  padding: 0 3rem;
  margin-bottom: 9rem;
  text-align: center;
  text-align: center;
}

.c42 span {
  font-weight: bold;
}

.c9 {
  width: 58rem;
  max-width: 100%;
}

.c9 .slick-prev,
.c9 .slick-next {
  width: 34px;
  height: 34px;
  position: absolute;
  z-index: 1;
  border-radius: 50%;
  background-color: hsl(0deg 0% 0% / 17%);
  color: hsla(0,0%,100%);
  stroke-width: 1.2;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c9 .slick-prev:hover,
.c9 .slick-next:hover {
  background-color: hsl(0deg 0% 0% / 70%);
}

.c9 .slick-prev {
  left: 6px;
}

.c9 .slick-next {
  right: 6px;
}

.c9 .slick-prev:before,
.c9 .slick-next:before {
  color: hsla(0,0%,40%);
  font-size: 34px;
}

.c9 .slick-dots {
  bottom: 10px;
}

.c9 .slick-dots li button {
  width: 20px;
  height: 20px;
}

.c9 .slick-dots li button:before {
  content: '';
  display: inline-block;
  background-color: hsla(0,0%,100%);
  border: 4px solid hsla(0,0%,100%);
  border-radius: 50%;
  margin: 0 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c9 .slick-dots li.slick-active button:before {
  background-color: hsla(29,94%,62%);
}

.c10 {
  margin: 0 auto;
  width: 100%;
  max-width: 100%;
  height: auto;
  border-radius: 0.5rem;
}

.c45 {
  color: hsla(0,0%,7%);
}

.c45:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c16 span {
  display: inline-block;
  font-size: 1.6rem;
  color: hsla(0,0%,40%);
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c16 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c16 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.c44:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c46 {
  width: 100%;
  padding-top: 65%;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  overflow: hidden;
  position: relative;
}

.c46 img {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c47 {
  position: absolute;
  left: 2rem;
  padding: 0.7rem 2.2rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  box-shadow: 0rem 0rem 1rem hsla(0,0%,40%);
  font-size: 1.4rem;
  bottom: 2rem;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
  font-weight: 400;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 span {
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  font-size: 1.3rem;
  margin-left: 0.5rem;
}

.c50 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c51 {
  margin-bottom: 3rem;
  min-height: 7.6rem;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 2rem 0;
  border-top: 0.1rem solid hsla(0,0%,93%);
}

.c53 {
  font-weight: 400;
  color: hsla(0,0%,7%);
  text-transform: uppercase;
}

.c54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c54 span {
  color: hsl(166,100%,34%);
  margin-left: 0.5rem;
  display: block;
}

.c54 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
  background: transparent;
  border: none;
}

.c15 svg {
  width: 3rem;
  height: 3rem;
}

.c15 svg:hover {
  -webkit-animation: jBAKzd 1.5s;
  animation: jBAKzd 1.5s;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid hsl(0,0%,93%);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  margin: 0;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  color: hsl(166,100%,34%);
  text-align: start;
  font-size: 3.6rem;
  font-weight: 500;
  line-height: 4.2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  font-size: 1.2rem;
  font-weight: 500;
  line-height: 1.6rem;
  color: hsla(0,0%,52%);
  padding: 1.6rem 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-right: 3.2rem;
  text-align: justify;
}

.c18 p:first-child {
  color: hsla(0,0%,31%);
  font-size: 1.6rem;
  line-height: 2.4rem;
  margin-bottom: 0.8rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 .styles__StyledButton-sc-9okshb-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 1.4rem;
  line-height: 2.4rem;
}

.c20 .styles__StyledButton-sc-9okshb-0 svg {
  margin-right: 0.4rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c21 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  white-space: nowrap;
  margin-bottom: 1rem;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c2 {
  background-color: rgba(29,29,29,0.1);
  max-width: 58rem;
  border: none;
  border-radius: 0.5rem;
  width: 100%;
  z-index: 100;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.8rem;
}

.c2 .react-autosuggest__container {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .react-autosuggest__suggestion {
  padding: 1.6rem;
  cursor: pointer;
}

.c2 .react-autosuggest__suggestion.react-autosuggest__suggestion--highlighted {
  background-color: hsla(0,0%,95%);
}

.c2 .ais-Highlight-highlighted {
  background-color: hsla(29,94%,62%);
}

.c5 {
  overflow: hidden;
  position: absolute;
  background-color: hsla(0,0%,100%);
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  border-radius: 0.5rem;
  right: 0;
  left: 0;
}

.c5 .c55 {
  border-top-right-radius: 0.5rem;
  border-top-left-radius: 0.5rem;
}

.c4 {
  background: none;
  border: none;
  outline: none;
  margin-right: 1.2rem;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.4rem;
  color: hsl(166,100%,34%);
  padding: 0.4rem 0.8rem;
}

.c4 > svg {
  margin-right: 0.4rem;
}

.c4:hover:not(:disabled) {
  color: hsla(0,0%,100%);
  background: hsl(166,100%,34%);
}

.c4:focus:not(:disabled) {
  box-shadow: 0px 0px 4px 2px hsla(29,94%,62%);
}

.c4:disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c3 {
  background: hsla(0,0%,100%);
  border: 0.1rem solid hsla(0,0%,95%);
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 input {
  width: 100%;
  padding: 1.2rem 1.6rem;
  font-size: 1.6rem;
  line-height: 1.9rem;
  color: hsla(204,7%,15%);
  border: none;
}

.c0 {
  background-color: hsl(166,100%,34%);
  background-image: url(/pattern.png);
  background-size: auto 8.8rem;
  background-repeat: no-repeat;
  background-position: right center;
}

.c1 {
  height: 8.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.6rem;
  padding-left: 2rem;
  max-width: 1440px;
  margin: 0 auto;
}

.c30 {
  margin: 0 1rem;
  padding: 2rem 0;
}

.c31 {
  border-bottom: 4px solid hsla(29,94%,62%);
  width: 100%;
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c31:first-child {
  margin-top: 0;
}

.c31 h4 {
  display: inline-block;
  background-color: hsla(29,94%,62%);
  color: hsla(0,0%,100%);
  padding: 2.5rem 3rem;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 2rem;
  text-transform: uppercase;
  margin-bottom: -4px;
}

.c36 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c37 {
  width: 316px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0 8px 16px;
}

.c37 a {
  display: block;
  padding: 0;
  margin-bottom: 10px;
}

.c37 a:hover {
  opacity: 0.7;
}

.c37 img {
  background: hsla(0,0%,52%);
  width: 100%;
  display: block;
}

.c32 {
  display: block;
  font-weight: 500;
  font-size: 1.4rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
}

.c32:not(:first-child) {
  margin-top: 1rem;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c33 {
  display: grid;
  grid-template-columns: repeat(auto-fill,30%);
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fill,20%);
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 > * {
  margin-bottom: 1rem;
}

.c34 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 > * {
  margin-bottom: 1rem;
}

.c39 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c35 {
  width: 100%;
  -webkit-filter: opacity(0.7);
  filter: opacity(0.7);
  cursor: pointer;
  -webkit-filter: opacity(1);
  filter: opacity(1);
}

.c40 {
  color: hsla(0,0%,7%);
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 0rem;
  margin-bottom: 1rem;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: hsla(0,0%,100%);
  border-bottom-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.c28 > *:not(:first-child):not(:last-child) {
  margin: 0 1rem;
}

.c22 {
  -webkit-tap-highlight-color: transparent;
  border-radius: 5px;
  overflow: hidden;
  -webkit-filter: drop-shadow(2px 2px 8px rgba(0,0,0,0.15));
  filter: drop-shadow(2px 2px 8px rgba(0,0,0,0.15));
  margin-top: 8.4rem;
}

.c23 {
  padding: 0;
  display: grid;
}

.c25 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 0.8rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,40%);
  cursor: pointer;
  background: hsla(0,0%,100%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
  border: none;
  border-bottom: 0.4rem solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: hsla(0,0%,52%);
  font-weight: 700;
  color: hsl(166,100%,34%);
  border-bottom: 0.4rem solid hsl(166,100%,34%);
  background-color: hsl(0,0%,93%);
}

.c25:first-child {
  border-left-color: transparent;
}

.c25:last-child {
  border-right-color: transparent;
}

.c25:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c25:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c25:focus {
  color: hsla(29,94%,62%);
}

.c25:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: 0;
  background: hsla(29,94%,62%);
}

.c24 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 0.8rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,52%);
  cursor: pointer;
  background: hsl(0,0%,93%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
  border: none;
  border-bottom: 0.4rem solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: hsla(0,0%,52%);
  font-weight: 700;
}

.c24:first-child {
  border-left-color: transparent;
}

.c24:last-child {
  border-right-color: transparent;
}

.c24:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c24:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c24:focus {
  color: hsla(29,94%,62%);
}

.c24:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: 0;
  background: hsla(29,94%,62%);
}

.c43 {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(32rem,1fr));
  grid-gap: 5rem 3rem;
}

.c6 {
  background-color: hsla(0,0%,98%);
}

.c7 {
  padding: 2rem;
  max-width: 1440px;
  margin: 0 auto;
}

@media (max-width:768px) {
  .c41 {
    padding: 6rem 1%;
  }
}

@media (max-width:1170px) {

}

@media (max-width:1170px) {
  .c29 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c29 {
    margin: 0;
  }
}

@media (max-width:1170px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c42 {
    font-size: 3rem;
    margin-bottom: 6rem;
  }
}

@media screen and (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {
  .c9 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c12 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:450px) {
  .c14 {
    width: 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    -webkit-flex-wrap: unset;
    -ms-flex-wrap: unset;
    flex-wrap: unset;
  }
}

@media (max-width:768px) {
  .c13 {
    margin-top: 1rem;
  }
}

@media (max-width:1170px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c11 .c19 {
    margin: auto;
  }
}

@media (min-width:768px) {
  .c11 {
    padding: 1rem;
  }
}

@media (min-width:1170px) {
  .c11 {
    padding: 0 0 3.2rem 3.2rem;
  }
}

@media (max-width:451px) {
  .c21 button {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c2 .react-autosuggest__container {
    margin-right: 0;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-left: 4rem;
  }
}

@media screen and (min-width:768px) {
  .c30 {
    margin: 0 3.2rem;
    padding: 3.2rem 0;
  }
}

@media (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {

}

@media (max-width:450px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {

}

@media (max-width:1170px) {
  .c37 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c33 {
    grid-template-columns: repeat(auto-fill,100%);
  }
}

@media (max-width:1170px) {
  .c28 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c28 > *:not(:first-child):not(:last-child) {
    margin-top: 1.5rem;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
  }
}

@media screen and (min-width:1170px) {
  .c23 {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
  }
}

@media screen and (min-width:1280px) {
  .c23 {
    grid-template-columns: repeat(6,1fr);
    grid-template-rows: 1fr;
  }
}

@media (max-width:768px) {
  .c43 {
    padding: 0 2rem;
  }
}

@media (min-width:768px) {
  .c7 {
    padding: 6rem 4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <form
        class="c2"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          class="react-autosuggest__container"
          role="combobox"
        >
          <div
            class="c3"
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              autocomplete="off"
              class="react-autosuggest__input"
              placeholder="search:searchPlaceholder"
              type="text"
              value=""
            />
            <button
              aria-label="Submit search"
              class="c4"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
              Pesquisar
            </button>
          </div>
          <div
            class="c5"
          >
            <div
              class="react-autosuggest__suggestions-container"
              id="react-autowhatever-1"
              role="listbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          aria-label="Carrossel com imagens da tecnologia"
          role="listbox"
        >
          <div
            class="slick-slider c9 slick-initialized"
          >
            
            <div
              class="slick-list"
            >
              <div
                class="slick-track"
                style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
              >
                <div
                  aria-hidden="false"
                  class="slick-slide slick-active slick-current"
                  data-index="0"
                  style="outline: none; width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      class="c10"
                      src="http://127.0.0.1:3333/uploads/technologies/image.png"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
              </div>
            </div>
            
            
          </div>
        </div>
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <h2
              class="c13"
            >
              Agebavzi niko zaro.
            </h2>
            <div
              class="c14"
            >
              <button
                aria-label="share"
                class="c15"
              >
                <svg
                  class=""
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
                  />
                </svg>
              </button>
              <div
                class="c16"
              >
                <svg
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18"
            >
              <p>
                Descrição
              </p>
              Gec hik gir.
            </div>
            <div
              class="c19 c20"
            >
              <div
                class="c21"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__Tabs-tmpyts-0 c22"
        data-tabs="true"
      >
        <ul
          class="styles__TabList-tmpyts-3 c23"
          role="tablist"
        >
          <li
            aria-controls="react-tabs-1"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="about"
            id="react-tabs-0"
            role="tab"
          >
            Sobre a Tecnologia
          </li>
          <li
            aria-controls="react-tabs-3"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="description"
            id="react-tabs-2"
            role="tab"
          >
            Caracterização
          </li>
          <li
            aria-controls="react-tabs-5"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="geolocation"
            id="react-tabs-4"
            role="tab"
          >
            Georeferenciamento
          </li>
          <li
            aria-controls="react-tabs-7"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="costs"
            id="react-tabs-6"
            role="tab"
          >
            Custos e Financiamento
          </li>
          <li
            aria-controls="react-tabs-9"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="review"
            id="react-tabs-8"
            role="tab"
          >
            Relatos de Experiência
          </li>
          <li
            aria-controls="react-tabs-11"
            aria-disabled="false"
            aria-selected="true"
            class="styles__Tab-tmpyts-1 c25 react-tabs__tab--selected"
            data-testid="attachments"
            id="react-tabs-10"
            role="tab"
            tabindex="0"
          >
            Documentos
          </li>
        </ul>
        <div
          aria-labelledby="react-tabs-0"
          class="c26"
          id="react-tabs-1"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-2"
          class="c26"
          id="react-tabs-3"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-4"
          class="c26"
          id="react-tabs-5"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-6"
          class="c26"
          id="react-tabs-7"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-8"
          class="c26"
          id="react-tabs-9"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-10"
          class="c27 react-tabs__tab-panel--selected"
          id="react-tabs-11"
          role="tabpanel"
        >
          <div
            class="c28"
          >
            <div
              class="c29"
            >
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Fotos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Fotos da Tecnologia
                </span>
                <div
                  class="styles__UploadedImages-sc-13jh09q-9 c33"
                >
                  <div
                    class="styles__IconRow-sc-13jh09q-15 c34"
                  >
                    <img
                      aria-label="Open image gallery"
                      class="styles__Media-sc-13jh09q-14 c35"
                      role="button"
                      src="http://127.0.0.1:3333/uploads/technologies/image.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Vídeos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Vídeos da Tecnologia
                </span>
                <section
                  class="c36"
                >
                  <section
                    class="c37"
                  >
                    <a
                      href="//www.youtube.com/watch?v=8h7p88oySWY"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <img
                        alt="Youtube vídeo 8h7p88oySWY"
                        src="http://i3.ytimg.com/vi/8h7p88oySWY/hqdefault.jpg"
                      />
                    </a>
                  </section>
                </section>
              </div>
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Documentos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Documentos
                </span>
                <div
                  class="styles__UploadedDocuments-sc-13jh09q-8 c38"
                >
                  <div
                    class="styles__IconRow-sc-13jh09q-15 c39"
                  >
                    <a
                      class="styles__IconLink-sc-13jh09q-2 c40"
                      href="http://127.0.0.1:3333/uploads/technologies/image-1.pdf"
                    >
                      <svg
                        fill="currentColor"
                        height="2rem"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 384 512"
                        width="2rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                        />
                      </svg>
                       
                      image-1.pdf
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c41"
  >
    <h2
      class="c42"
    >
      common:relatedSolutions
    </h2>
    <div
      class="c43"
      data-testid="cards-wrapper"
    >
      <div
        class="c44"
      >
        <a
          class="c45"
          href="/t/agebavzi-niko-zaro"
          target="_self"
        >
          <div
            class="c46"
          >
            <img
              alt="Agebavzi niko zaro."
              src="card-image.jpg"
            />
            <div
              class="c47"
            >
              Tecnologias Sociais
            </div>
          </div>
        </a>
        <div
          class="c48"
        >
          <div
            class="c49"
          >
            <div
              class="c50"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                />
              </svg>
              <span>
                card:privateTechnology
              </span>
            </div>
            <div
              data-testid="card-heart"
            >
              <div
                class="c16"
              >
                <svg
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <a
            class="c45"
            href="/t/agebavzi-niko-zaro"
            target="_self"
          >
            <h3
              class="c51"
              data-testid="card-title"
            >
              Agebavzi niko zaro.
            </h3>
          </a>
          <div
            class="c52"
          >
            <span
              class="c53"
            >
              card:notDefinedInstitution
            </span>
            <div
              class="c54"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                />
              </svg>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Technology Details Page render correctly when user is not logged in 1`] = `
.c27 {
  display: block;
}

.c26 {
  display: none;
}

.c41 {
  background-color: hsla(0,0%,98%);
  padding: 9rem 5%;
}

.c29 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c42 {
  padding: 0 3rem;
  margin-bottom: 9rem;
  text-align: center;
  text-align: center;
}

.c42 span {
  font-weight: bold;
}

.c9 {
  width: 58rem;
  max-width: 100%;
}

.c9 .slick-prev,
.c9 .slick-next {
  width: 34px;
  height: 34px;
  position: absolute;
  z-index: 1;
  border-radius: 50%;
  background-color: hsl(0deg 0% 0% / 17%);
  color: hsla(0,0%,100%);
  stroke-width: 1.2;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c9 .slick-prev:hover,
.c9 .slick-next:hover {
  background-color: hsl(0deg 0% 0% / 70%);
}

.c9 .slick-prev {
  left: 6px;
}

.c9 .slick-next {
  right: 6px;
}

.c9 .slick-prev:before,
.c9 .slick-next:before {
  color: hsla(0,0%,40%);
  font-size: 34px;
}

.c9 .slick-dots {
  bottom: 10px;
}

.c9 .slick-dots li button {
  width: 20px;
  height: 20px;
}

.c9 .slick-dots li button:before {
  content: '';
  display: inline-block;
  background-color: hsla(0,0%,100%);
  border: 4px solid hsla(0,0%,100%);
  border-radius: 50%;
  margin: 0 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.c9 .slick-dots li.slick-active button:before {
  background-color: hsla(29,94%,62%);
}

.c10 {
  margin: 0 auto;
  width: 100%;
  max-width: 100%;
  height: auto;
  border-radius: 0.5rem;
}

.c45 {
  color: hsla(0,0%,7%);
}

.c45:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c16 span {
  display: inline-block;
  font-size: 1.6rem;
  color: hsla(0,0%,40%);
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c16 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c16 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.c44:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c46 {
  width: 100%;
  padding-top: 65%;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  overflow: hidden;
  position: relative;
}

.c46 img {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c47 {
  position: absolute;
  left: 2rem;
  padding: 0.7rem 2.2rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  box-shadow: 0rem 0rem 1rem hsla(0,0%,40%);
  font-size: 1.4rem;
  bottom: 2rem;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
  font-weight: 400;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 span {
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  font-size: 1.3rem;
  margin-left: 0.5rem;
}

.c50 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c51 {
  margin-bottom: 3rem;
  min-height: 7.6rem;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 2rem 0;
  border-top: 0.1rem solid hsla(0,0%,93%);
}

.c53 {
  font-weight: 400;
  color: hsla(0,0%,7%);
  text-transform: uppercase;
}

.c54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c54 span {
  color: hsl(166,100%,34%);
  margin-left: 0.5rem;
  display: block;
}

.c54 svg {
  width: 1.5rem;
  height: 1.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
  background: transparent;
  border: none;
}

.c15 svg {
  width: 3rem;
  height: 3rem;
}

.c15 svg:hover {
  -webkit-animation: jBAKzd 1.5s;
  animation: jBAKzd 1.5s;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid hsl(0,0%,93%);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  margin: 0;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  color: hsl(166,100%,34%);
  text-align: start;
  font-size: 3.6rem;
  font-weight: 500;
  line-height: 4.2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  font-size: 1.2rem;
  font-weight: 500;
  line-height: 1.6rem;
  color: hsla(0,0%,52%);
  padding: 1.6rem 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-right: 3.2rem;
  text-align: justify;
}

.c18 p:first-child {
  color: hsla(0,0%,31%);
  font-size: 1.6rem;
  line-height: 2.4rem;
  margin-bottom: 0.8rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 .c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 1.4rem;
  line-height: 2.4rem;
}

.c20 .c56 svg {
  margin-right: 0.4rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c21 button {
  text-transform: uppercase;
  font-size: 1.8rem;
  padding: 0.8rem;
  border-radius: 2px;
  white-space: nowrap;
  margin-bottom: 1rem;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c2 {
  background-color: rgba(29,29,29,0.1);
  max-width: 58rem;
  border: none;
  border-radius: 0.5rem;
  width: 100%;
  z-index: 100;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.8rem;
}

.c2 .react-autosuggest__container {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .react-autosuggest__suggestion {
  padding: 1.6rem;
  cursor: pointer;
}

.c2 .react-autosuggest__suggestion.react-autosuggest__suggestion--highlighted {
  background-color: hsla(0,0%,95%);
}

.c2 .ais-Highlight-highlighted {
  background-color: hsla(29,94%,62%);
}

.c5 {
  overflow: hidden;
  position: absolute;
  background-color: hsla(0,0%,100%);
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  border-radius: 0.5rem;
  right: 0;
  left: 0;
}

.c5 .c55 {
  border-top-right-radius: 0.5rem;
  border-top-left-radius: 0.5rem;
}

.c4 {
  background: none;
  border: none;
  outline: none;
  margin-right: 1.2rem;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.4rem;
  color: hsl(166,100%,34%);
  padding: 0.4rem 0.8rem;
}

.c4 > svg {
  margin-right: 0.4rem;
}

.c4:hover:not(:disabled) {
  color: hsla(0,0%,100%);
  background: hsl(166,100%,34%);
}

.c4:focus:not(:disabled) {
  box-shadow: 0px 0px 4px 2px hsla(29,94%,62%);
}

.c4:disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c3 {
  background: hsla(0,0%,100%);
  border: 0.1rem solid hsla(0,0%,95%);
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 input {
  width: 100%;
  padding: 1.2rem 1.6rem;
  font-size: 1.6rem;
  line-height: 1.9rem;
  color: hsla(204,7%,15%);
  border: none;
}

.c0 {
  background-color: hsl(166,100%,34%);
  background-image: url(/pattern.png);
  background-size: auto 8.8rem;
  background-repeat: no-repeat;
  background-position: right center;
}

.c1 {
  height: 8.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.6rem;
  padding-left: 2rem;
  max-width: 1440px;
  margin: 0 auto;
}

.c30 {
  margin: 0 1rem;
  padding: 2rem 0;
}

.c31 {
  border-bottom: 4px solid hsla(29,94%,62%);
  width: 100%;
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c31:first-child {
  margin-top: 0;
}

.c31 h4 {
  display: inline-block;
  background-color: hsla(29,94%,62%);
  color: hsla(0,0%,100%);
  padding: 2.5rem 3rem;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 2rem;
  text-transform: uppercase;
  margin-bottom: -4px;
}

.c36 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c37 {
  width: 316px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0 8px 16px;
}

.c37 a {
  display: block;
  padding: 0;
  margin-bottom: 10px;
}

.c37 a:hover {
  opacity: 0.7;
}

.c37 img {
  background: hsla(0,0%,52%);
  width: 100%;
  display: block;
}

.c32 {
  display: block;
  font-weight: 500;
  font-size: 1.4rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
}

.c32:not(:first-child) {
  margin-top: 1rem;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c33 {
  display: grid;
  grid-template-columns: repeat(auto-fill,30%);
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fill,20%);
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 > * {
  margin-bottom: 1rem;
}

.c34 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 > * {
  margin-bottom: 1rem;
}

.c39 > a {
  padding: 0;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c35 {
  width: 100%;
  -webkit-filter: opacity(0.7);
  filter: opacity(0.7);
  cursor: pointer;
  -webkit-filter: opacity(1);
  filter: opacity(1);
}

.c40 {
  color: hsla(0,0%,7%);
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 0rem;
  margin-bottom: 1rem;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: hsla(0,0%,100%);
  border-bottom-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.c28 > *:not(:first-child):not(:last-child) {
  margin: 0 1rem;
}

.c22 {
  -webkit-tap-highlight-color: transparent;
  border-radius: 5px;
  overflow: hidden;
  -webkit-filter: drop-shadow(2px 2px 8px rgba(0,0,0,0.15));
  filter: drop-shadow(2px 2px 8px rgba(0,0,0,0.15));
  margin-top: 8.4rem;
}

.c23 {
  padding: 0;
  display: grid;
}

.c25 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 0.8rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,40%);
  cursor: pointer;
  background: hsla(0,0%,100%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
  border: none;
  border-bottom: 0.4rem solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: hsla(0,0%,52%);
  font-weight: 700;
  color: hsl(166,100%,34%);
  border-bottom: 0.4rem solid hsl(166,100%,34%);
  background-color: hsl(0,0%,93%);
}

.c25:first-child {
  border-left-color: transparent;
}

.c25:last-child {
  border-right-color: transparent;
}

.c25:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c25:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c25:focus {
  color: hsla(29,94%,62%);
}

.c25:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: 0;
  background: hsla(29,94%,62%);
}

.c24 {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  font-size: 1.4rem;
  line-height: 17px;
  text-align: center;
  padding: 1.6rem 0.8rem;
  text-transform: uppercase;
  border: 0.5px solid transparent;
  border-radius: 0;
  color: hsla(0,0%,52%);
  cursor: pointer;
  background: hsl(0,0%,93%);
  border-left-color: hsl(0,0%,74%);
  border-right-color: hsl(0,0%,74%);
  border: none;
  border-bottom: 0.4rem solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: hsla(0,0%,52%);
  font-weight: 700;
}

.c24:first-child {
  border-left-color: transparent;
}

.c24:last-child {
  border-right-color: transparent;
}

.c24:focus {
  box-shadow: 0 0 5px hsla(0,0%,100%,0.07);
  border-color: hsla(0,0%,100%,0.07);
  outline: none;
}

.c24:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: hsla(0,0%,100%);
}

.c24:focus {
  color: hsla(29,94%,62%);
}

.c24:focus:after {
  content: '';
  position: absolute;
  height: 5px;
  left: 0;
  background: hsla(29,94%,62%);
}

.c43 {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(32rem,1fr));
  grid-gap: 5rem 3rem;
}

.c6 {
  background-color: hsla(0,0%,98%);
}

.c7 {
  padding: 2rem;
  max-width: 1440px;
  margin: 0 auto;
}

@media (max-width:768px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c41 {
    padding: 6rem 1%;
  }
}

@media (max-width:1170px) {

}

@media (max-width:1170px) {
  .c29 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c29 {
    margin: 0;
  }
}

@media (max-width:1170px) {

}

@media (max-width:768px) {

}

@media (max-width:768px) {
  .c42 {
    font-size: 3rem;
    margin-bottom: 6rem;
  }
}

@media screen and (max-width:768px) {

}

@media (max-width:768px) {
  .c9 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c12 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:450px) {
  .c14 {
    width: 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    -webkit-flex-wrap: unset;
    -ms-flex-wrap: unset;
    flex-wrap: unset;
  }
}

@media (max-width:768px) {
  .c13 {
    margin-top: 1rem;
  }
}

@media (max-width:1170px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c11 .c19 {
    margin: auto;
  }
}

@media (min-width:768px) {
  .c11 {
    padding: 1rem;
  }
}

@media (min-width:1170px) {
  .c11 {
    padding: 0 0 3.2rem 3.2rem;
  }
}

@media (max-width:451px) {
  .c21 button {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c2 .react-autosuggest__container {
    margin-right: 0;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-left: 4rem;
  }
}

@media screen and (min-width:768px) {
  .c30 {
    margin: 0 3.2rem;
    padding: 3.2rem 0;
  }
}

@media (max-width:1170px) {
  .c37 {
    width: 100%;
  }
}

@media (max-width:450px) {
  .c33 {
    grid-template-columns: repeat(auto-fill,100%);
  }
}

@media (max-width:1170px) {
  .c28 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c28 > *:not(:first-child):not(:last-child) {
    margin-top: 1.5rem;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
  }
}

@media screen and (min-width:1170px) {
  .c23 {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
  }
}

@media screen and (min-width:1280px) {
  .c23 {
    grid-template-columns: repeat(6,1fr);
    grid-template-rows: 1fr;
  }
}

@media (max-width:768px) {
  .c43 {
    padding: 0 2rem;
  }
}

@media (min-width:768px) {
  .c7 {
    padding: 6rem 4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <form
        class="c2"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          class="react-autosuggest__container"
          role="combobox"
        >
          <div
            class="c3"
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              autocomplete="off"
              class="react-autosuggest__input"
              placeholder="search:searchPlaceholder"
              type="text"
              value=""
            />
            <button
              aria-label="Submit search"
              class="c4"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
              Pesquisar
            </button>
          </div>
          <div
            class="c5"
          >
            <div
              class="react-autosuggest__suggestions-container"
              id="react-autowhatever-1"
              role="listbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          aria-label="Carrossel com imagens da tecnologia"
          role="listbox"
        >
          <div
            class="slick-slider c9 slick-initialized"
          >
            
            <div
              class="slick-list"
            >
              <div
                class="slick-track"
                style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
              >
                <div
                  aria-hidden="false"
                  class="slick-slide slick-active slick-current"
                  data-index="0"
                  style="outline: none; width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      class="c10"
                      src="http://127.0.0.1:3333/uploads/technologies/image.png"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
              </div>
            </div>
            
            
          </div>
        </div>
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <h2
              class="c13"
            >
              Agebavzi niko zaro.
            </h2>
            <div
              class="c14"
            >
              <button
                aria-label="share"
                class="c15"
              >
                <svg
                  class=""
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
                  />
                </svg>
              </button>
              <div
                class="c16"
              >
                <svg
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18"
            >
              <p>
                Descrição
              </p>
              Gec hik gir.
            </div>
            <div
              class="c19 c20"
            >
              <div
                class="c21"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__Tabs-tmpyts-0 c22"
        data-tabs="true"
      >
        <ul
          class="styles__TabList-tmpyts-3 c23"
          role="tablist"
        >
          <li
            aria-controls="react-tabs-13"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="about"
            id="react-tabs-12"
            role="tab"
          >
            Sobre a Tecnologia
          </li>
          <li
            aria-controls="react-tabs-15"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="description"
            id="react-tabs-14"
            role="tab"
          >
            Caracterização
          </li>
          <li
            aria-controls="react-tabs-17"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="geolocation"
            id="react-tabs-16"
            role="tab"
          >
            Georeferenciamento
          </li>
          <li
            aria-controls="react-tabs-19"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="costs"
            id="react-tabs-18"
            role="tab"
          >
            Custos e Financiamento
          </li>
          <li
            aria-controls="react-tabs-21"
            aria-disabled="false"
            aria-selected="false"
            class="styles__Tab-tmpyts-1 c24"
            data-testid="review"
            id="react-tabs-20"
            role="tab"
          >
            Relatos de Experiência
          </li>
          <li
            aria-controls="react-tabs-23"
            aria-disabled="false"
            aria-selected="true"
            class="styles__Tab-tmpyts-1 c25 react-tabs__tab--selected"
            data-testid="attachments"
            id="react-tabs-22"
            role="tab"
            tabindex="0"
          >
            Documentos
          </li>
        </ul>
        <div
          aria-labelledby="react-tabs-12"
          class="c26"
          id="react-tabs-13"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-14"
          class="c26"
          id="react-tabs-15"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-16"
          class="c26"
          id="react-tabs-17"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-18"
          class="c26"
          id="react-tabs-19"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-20"
          class="c26"
          id="react-tabs-21"
          role="tabpanel"
        />
        <div
          aria-labelledby="react-tabs-22"
          class="c27 react-tabs__tab-panel--selected"
          id="react-tabs-23"
          role="tabpanel"
        >
          <div
            class="c28"
          >
            <div
              class="c29"
            >
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Fotos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Fotos da Tecnologia
                </span>
                <div
                  class="styles__UploadedImages-sc-13jh09q-9 c33"
                >
                  <div
                    class="styles__IconRow-sc-13jh09q-15 c34"
                  >
                    <img
                      aria-label="Open image gallery"
                      class="styles__Media-sc-13jh09q-14 c35"
                      role="button"
                      src="http://127.0.0.1:3333/uploads/technologies/image.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Vídeos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Vídeos da Tecnologia
                </span>
                <section
                  class="c36"
                >
                  <section
                    class="c37"
                  >
                    <a
                      href="//www.youtube.com/watch?v=8h7p88oySWY"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <img
                        alt="Youtube vídeo 8h7p88oySWY"
                        src="http://i3.ytimg.com/vi/8h7p88oySWY/hqdefault.jpg"
                      />
                    </a>
                  </section>
                </section>
              </div>
              <div
                class="c30"
              >
                <div
                  class="c31"
                  color="primary"
                >
                  <h4>
                    Documentos
                  </h4>
                </div>
                <span
                  class="c32"
                >
                  Documentos
                </span>
                <div
                  class="styles__UploadedDocuments-sc-13jh09q-8 c38"
                >
                  <div
                    class="styles__IconRow-sc-13jh09q-15 c39"
                  >
                    <a
                      class="styles__IconLink-sc-13jh09q-2 c40"
                      href="http://127.0.0.1:3333/uploads/technologies/image-1.pdf"
                    >
                      <svg
                        fill="currentColor"
                        height="2rem"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 384 512"
                        width="2rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"
                        />
                      </svg>
                       
                      image-1.pdf
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c41"
  >
    <h2
      class="c42"
    >
      common:relatedSolutions
    </h2>
    <div
      class="c43"
      data-testid="cards-wrapper"
    >
      <div
        class="c44"
      >
        <a
          class="c45"
          href="/t/agebavzi-niko-zaro"
          target="_self"
        >
          <div
            class="c46"
          >
            <img
              alt="Agebavzi niko zaro."
              src="card-image.jpg"
            />
            <div
              class="c47"
            >
              Tecnologias Sociais
            </div>
          </div>
        </a>
        <div
          class="c48"
        >
          <div
            class="c49"
          >
            <div
              class="c50"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                />
              </svg>
              <span>
                card:privateTechnology
              </span>
            </div>
            <div
              data-testid="card-heart"
            >
              <div
                class="c16"
              >
                <svg
                  color="hsla(0, 0%, 52%)"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(133, 133, 133);"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
                <span>
                  1
                </span>
              </div>
            </div>
          </div>
          <a
            class="c45"
            href="/t/agebavzi-niko-zaro"
            target="_self"
          >
            <h3
              class="c51"
              data-testid="card-title"
            >
              Agebavzi niko zaro.
            </h3>
          </a>
          <div
            class="c52"
          >
            <span
              class="c53"
            >
              card:notDefinedInstitution
            </span>
            <div
              class="c54"
            >
              <svg
                color="hsl(166, 100%, 34%)"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(0, 0, 0);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                />
              </svg>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
